--- a/turbo/generators/templates/package-react/package.json.hbs
+++ b/turbo/generators/templates/package-react/package.json.hbs
@@ -10,7 +10,7 @@
     "./lib/*": "./src/lib/*.ts"
   },
   "scripts": {
-    "type-check": "tsc --noEmit",
+    "typecheck": "tsc --noEmit",
     "lint": "eslint . --max-warnings 0"
   },
   "peerDependencies": {
