--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -1,7 +1,6 @@
 @import "tailwindcss";
-@import "tw-animate-css";
 
-@config "../../tailwind.config.js";
+@config "../tailwind.config.js";
 
 @custom-variant dark (&:is(.dark *));
 
