--- a/turbo/generators/templates/app-web/package.json.hbs
+++ b/turbo/generators/templates/app-web/package.json.hbs
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "{{ appName }}",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -11,22 +11,20 @@
   },
   "dependencies": {
     "@repo/lib": "workspace:*",
-    "@repo/shared": "workspace:*",
     "@repo/ui": "workspace:*",
     "@tailwindcss/vite": "^4.1.17",
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "@repo/shared": "workspace:*"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
-    "@tailwindcss/postcss": "^4.1.17",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9.18.0",
-    "postcss": "^8.5.6",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.7.2",
     "vite": "^7.2.4",
