--- a/turbo/generators/templates/app-web/src/main.tsx.hbs
+++ b/turbo/generators/templates/app-web/src/main.tsx.hbs
@@ -1,9 +1,7 @@
 import { createRoot } from "react-dom/client";
 import React from "react";
 import "@repo/ui/styles";
-import "./index.css";
-import App from "./App";
-import { ThemeProvider } from "@repo/ui/components/theme-provider";
+import { App } from "./App";
 
 const rootElement = document.getElementById("root");
 if (!rootElement) throw new Error("Failed to find the root element");
@@ -12,8 +10,6 @@ const root = createRoot(rootElement);
 
 root.render(
   <React.StrictMode>
-    <ThemeProvider>
-      <App />
-    </ThemeProvider>
-  </React.StrictMode>
+    <App />
+  </React.StrictMode>,
 );
