--- a/turbo/generators/templates/package-non-react/tsconfig.json.hbs
+++ b/turbo/generators/templates/package-non-react/tsconfig.json.hbs
@@ -2,8 +2,9 @@
   "extends": "@repo/typescript-config/base.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src"
+    "rootDir": "src",
+    "tsBuildInfoFile": ".turbo/types/{{ packageName }}.tsbuildinfo"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", ".turbo"]
 }
