--- a/turbo/generators/templates/package-react/tsconfig.json.hbs
+++ b/turbo/generators/templates/package-react/tsconfig.json.hbs
@@ -1,11 +1,10 @@
 {
   "extends": "@repo/typescript-config/react-library.json",
   "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@repo/{{ packageName }}/*": ["./src/*"]
-    }
+    "outDir": "dist",
+    "rootDir": "src",
+    "tsBuildInfoFile": ".turbo/types/{{ packageName }}.tsbuildinfo"
   },
-  "include": ["."],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist", ".turbo"]
 }
